src/biro/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> statement
Rule 4     statement -> variable_declaration
Rule 5     statement -> variable_assignment
Rule 6     statement -> conditional_statement
Rule 7     statement -> array_declaration
Rule 8     statement -> queue_declaration
Rule 9     statement -> stack_declaration
Rule 10    statement -> try_block
Rule 11    statement -> catch_block
Rule 12    statement -> loop_statement
Rule 13    statement -> function_declaration
Rule 14    statement -> function_call
Rule 15    statement -> builtin_call
Rule 16    statement -> empty
Rule 17    variable_declaration -> BIRO ID COLON type ASSIGN assigned_expression
Rule 18    variable_declaration -> SMALLBIRO ID COLON type ASSIGN assigned_expression
Rule 19    variable_assignment -> ID ASSIGN assigned_expression
Rule 20    assigned_expression -> expression
Rule 21    assigned_expression -> array_declaration
Rule 22    assigned_expression -> queue_declaration
Rule 23    assigned_expression -> stack_declaration
Rule 24    array_declaration -> LITERAL_A LSQUARE expression_list RSQUARE
Rule 25    queue_declaration -> LITERAL_Q LSQUARE expression_list RSQUARE
Rule 26    stack_declaration -> LITERAL_S LSQUARE expression_list RSQUARE
Rule 27    conditional_statement -> BIRO IS expression QUESMARK LCURL control_flow_statements_list RCURL
Rule 28    try_block -> BIRO ATTEMPT LCURL statement_list RCURL
Rule 29    catch_block -> BIRO ARREST LCURL statement_list RCURL
Rule 30    loop_statement -> BIRO LOOP LCURL control_flow_statements_list RCURL
Rule 31    function_declaration -> BIRO ID LPAREN arg_list RPAREN COLON LPAREN type_list RPAREN LCURL donate_statement_list RCURL
Rule 32    function_call -> ID LPAREN expression_list RPAREN
Rule 33    builtin_call -> BIRO DOT function_call
Rule 34    donate_statement_list -> donate_statement donate_statement_list
Rule 35    donate_statement_list -> donate_statement
Rule 36    donate_statement -> statement_list
Rule 37    donate_statement -> DONATE expression
Rule 38    control_flow_statements_list -> control_flow_statements control_flow_statements_list
Rule 39    control_flow_statements_list -> control_flow_statements
Rule 40    control_flow_statements -> statement_list
Rule 41    control_flow_statements -> LEAVE
Rule 42    control_flow_statements -> PROCEED
Rule 43    control_flow_statements -> DONATE expression
Rule 44    expression -> ID
Rule 45    expression -> STRING
Rule 46    expression -> NUMBER
Rule 47    expression -> TRUE
Rule 48    expression -> FALSE
Rule 49    expression -> builtin_call
Rule 50    expression -> function_call
Rule 51    expression -> expression PLUS expression
Rule 52    expression -> expression MINUS expression
Rule 53    expression -> expression ASTERISK expression
Rule 54    expression -> expression DIVIDE expression
Rule 55    expression -> expression EQUALS expression
Rule 56    expression -> expression MORE expression
Rule 57    expression -> expression LESS expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression_list -> expression COMMA expression_list
Rule 61    expression_list -> expression
Rule 62    expression_list -> empty
Rule 63    arg_list -> ID COMMA arg_list
Rule 64    arg_list -> ID
Rule 65    arg_list -> empty
Rule 66    type_list -> type COMMA type_list
Rule 67    type_list -> type
Rule 68    type_list -> empty
Rule 69    type -> NUM
Rule 70    type -> STR
Rule 71    type -> BOOL
Rule 72    type -> LITERAL_A LSQUARE NUM RSQUARE
Rule 73    type -> LITERAL_A LSQUARE STR RSQUARE
Rule 74    type -> LITERAL_A LSQUARE BOOL RSQUARE
Rule 75    type -> LITERAL_Q LSQUARE NUM RSQUARE
Rule 76    type -> LITERAL_Q LSQUARE STR RSQUARE
Rule 77    type -> LITERAL_Q LSQUARE BOOL RSQUARE
Rule 78    type -> LITERAL_S LSQUARE NUM RSQUARE
Rule 79    type -> LITERAL_S LSQUARE STR RSQUARE
Rule 80    type -> LITERAL_S LSQUARE BOOL RSQUARE
Rule 81    empty -> <empty>

Terminals, with rules where they appear

AND                  : 58
ARREST               : 29
ASSIGN               : 17 18 19
ASTERISK             : 53
ATTEMPT              : 28
BIRO                 : 17 27 28 29 30 31 33
BOOL                 : 71 74 77 80
COLON                : 17 18 31
COMMA                : 60 63 66
DIVIDE               : 54
DONATE               : 37 43
DOT                  : 33
EQUALS               : 55
FALSE                : 48
ID                   : 17 18 19 31 32 44 63 64
IS                   : 27
LCURL                : 27 28 29 30 31
LEAVE                : 41
LESS                 : 57
LITERAL_A            : 24 72 73 74
LITERAL_Q            : 25 75 76 77
LITERAL_S            : 26 78 79 80
LOOP                 : 30
LPAREN               : 31 31 32
LSQUARE              : 24 25 26 72 73 74 75 76 77 78 79 80
MINUS                : 52
MORE                 : 56
NUM                  : 69 72 75 78
NUMBER               : 46
OR                   : 59
PLUS                 : 51
PROCEED              : 42
QUESMARK             : 27
RCURL                : 27 28 29 30 31
RPAREN               : 31 31 32
RSQUARE              : 24 25 26 72 73 74 75 76 77 78 79 80
SMALLBIRO            : 18
STR                  : 70 73 76 79
STRING               : 45
TRUE                 : 47
error                : 

Nonterminals, with rules where they appear

arg_list             : 31 63
array_declaration    : 7 21
assigned_expression  : 17 18 19
builtin_call         : 15 49
catch_block          : 11
conditional_statement : 6
control_flow_statements : 38 39
control_flow_statements_list : 27 30 38
donate_statement     : 34 35
donate_statement_list : 31 34
empty                : 16 62 65 68
expression           : 20 27 37 43 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61
expression_list      : 24 25 26 32 60
function_call        : 14 33 50
function_declaration : 13
loop_statement       : 12
program              : 0
queue_declaration    : 8 22
stack_declaration    : 9 23
statement            : 2 3
statement_list       : 1 2 28 29 36 40
try_block            : 10
type                 : 17 18 66 67
type_list            : 31 66
variable_assignment  : 5
variable_declaration : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . variable_declaration
    (5) statement -> . variable_assignment
    (6) statement -> . conditional_statement
    (7) statement -> . array_declaration
    (8) statement -> . queue_declaration
    (9) statement -> . stack_declaration
    (10) statement -> . try_block
    (11) statement -> . catch_block
    (12) statement -> . loop_statement
    (13) statement -> . function_declaration
    (14) statement -> . function_call
    (15) statement -> . builtin_call
    (16) statement -> . empty
    (17) variable_declaration -> . BIRO ID COLON type ASSIGN assigned_expression
    (18) variable_declaration -> . SMALLBIRO ID COLON type ASSIGN assigned_expression
    (19) variable_assignment -> . ID ASSIGN assigned_expression
    (27) conditional_statement -> . BIRO IS expression QUESMARK LCURL control_flow_statements_list RCURL
    (24) array_declaration -> . LITERAL_A LSQUARE expression_list RSQUARE
    (25) queue_declaration -> . LITERAL_Q LSQUARE expression_list RSQUARE
    (26) stack_declaration -> . LITERAL_S LSQUARE expression_list RSQUARE
    (28) try_block -> . BIRO ATTEMPT LCURL statement_list RCURL
    (29) catch_block -> . BIRO ARREST LCURL statement_list RCURL
    (30) loop_statement -> . BIRO LOOP LCURL control_flow_statements_list RCURL
    (31) function_declaration -> . BIRO ID LPAREN arg_list RPAREN COLON LPAREN type_list RPAREN LCURL donate_statement_list RCURL
    (32) function_call -> . ID LPAREN expression_list RPAREN
    (33) builtin_call -> . BIRO DOT function_call
    (81) empty -> .

  ! shift/reduce conflict for BIRO resolved as shift
  ! shift/reduce conflict for SMALLBIRO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LITERAL_A resolved as shift
  ! shift/reduce conflict for LITERAL_Q resolved as shift
  ! shift/reduce conflict for LITERAL_S resolved as shift
    BIRO            shift and go to state 17
    SMALLBIRO       shift and go to state 19
    ID              shift and go to state 18
    LITERAL_A       shift and go to state 20
    LITERAL_Q       shift and go to state 21
    LITERAL_S       shift and go to state 22
    $end            reduce using rule 81 (empty -> .)

  ! BIRO            [ reduce using rule 81 (empty -> .) ]
  ! SMALLBIRO       [ reduce using rule 81 (empty -> .) ]
  ! ID              [ reduce using rule 81 (empty -> .) ]
  ! LITERAL_A       [ reduce using rule 81 (empty -> .) ]
  ! LITERAL_Q       [ reduce using rule 81 (empty -> .) ]
  ! LITERAL_S       [ reduce using rule 81 (empty -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    variable_assignment            shift and go to state 5
    conditional_statement          shift and go to state 6
    array_declaration              shift and go to state 7
    queue_declaration              shift and go to state 8
    stack_declaration              shift and go to state 9
    try_block                      shift and go to state 10
    catch_block                    shift and go to state 11
    loop_statement                 shift and go to state 12
    function_declaration           shift and go to state 13
    function_call                  shift and go to state 14
    builtin_call                   shift and go to state 15
    empty                          shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement . statement_list
    (3) statement_list -> statement .
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . variable_declaration
    (5) statement -> . variable_assignment
    (6) statement -> . conditional_statement
    (7) statement -> . array_declaration
    (8) statement -> . queue_declaration
    (9) statement -> . stack_declaration
    (10) statement -> . try_block
    (11) statement -> . catch_block
    (12) statement -> . loop_statement
    (13) statement -> . function_declaration
    (14) statement -> . function_call
    (15) statement -> . builtin_call
    (16) statement -> . empty
    (17) variable_declaration -> . BIRO ID COLON type ASSIGN assigned_expression
    (18) variable_declaration -> . SMALLBIRO ID COLON type ASSIGN assigned_expression
    (19) variable_assignment -> . ID ASSIGN assigned_expression
    (27) conditional_statement -> . BIRO IS expression QUESMARK LCURL control_flow_statements_list RCURL
    (24) array_declaration -> . LITERAL_A LSQUARE expression_list RSQUARE
    (25) queue_declaration -> . LITERAL_Q LSQUARE expression_list RSQUARE
    (26) stack_declaration -> . LITERAL_S LSQUARE expression_list RSQUARE
    (28) try_block -> . BIRO ATTEMPT LCURL statement_list RCURL
    (29) catch_block -> . BIRO ARREST LCURL statement_list RCURL
    (30) loop_statement -> . BIRO LOOP LCURL control_flow_statements_list RCURL
    (31) function_declaration -> . BIRO ID LPAREN arg_list RPAREN COLON LPAREN type_list RPAREN LCURL donate_statement_list RCURL
    (32) function_call -> . ID LPAREN expression_list RPAREN
    (33) builtin_call -> . BIRO DOT function_call
    (81) empty -> .

  ! shift/reduce conflict for BIRO resolved as shift
  ! shift/reduce conflict for SMALLBIRO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LITERAL_A resolved as shift
  ! shift/reduce conflict for LITERAL_Q resolved as shift
  ! shift/reduce conflict for LITERAL_S resolved as shift
  ! shift/reduce conflict for BIRO resolved as shift
  ! shift/reduce conflict for SMALLBIRO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LITERAL_A resolved as shift
  ! shift/reduce conflict for LITERAL_Q resolved as shift
  ! shift/reduce conflict for LITERAL_S resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for RCURL resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for LEAVE resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for PROCEED resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for DONATE resolved using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RCURL           reduce using rule 3 (statement_list -> statement .)
    LEAVE           reduce using rule 3 (statement_list -> statement .)
    PROCEED         reduce using rule 3 (statement_list -> statement .)
    DONATE          reduce using rule 3 (statement_list -> statement .)
    BIRO            shift and go to state 17
    SMALLBIRO       shift and go to state 19
    ID              shift and go to state 18
    LITERAL_A       shift and go to state 20
    LITERAL_Q       shift and go to state 21
    LITERAL_S       shift and go to state 22

  ! BIRO            [ reduce using rule 3 (statement_list -> statement .) ]
  ! SMALLBIRO       [ reduce using rule 3 (statement_list -> statement .) ]
  ! ID              [ reduce using rule 3 (statement_list -> statement .) ]
  ! LITERAL_A       [ reduce using rule 3 (statement_list -> statement .) ]
  ! LITERAL_Q       [ reduce using rule 3 (statement_list -> statement .) ]
  ! LITERAL_S       [ reduce using rule 3 (statement_list -> statement .) ]
  ! BIRO            [ reduce using rule 81 (empty -> .) ]
  ! SMALLBIRO       [ reduce using rule 81 (empty -> .) ]
  ! ID              [ reduce using rule 81 (empty -> .) ]
  ! LITERAL_A       [ reduce using rule 81 (empty -> .) ]
  ! LITERAL_Q       [ reduce using rule 81 (empty -> .) ]
  ! LITERAL_S       [ reduce using rule 81 (empty -> .) ]
  ! $end            [ reduce using rule 81 (empty -> .) ]
  ! RCURL           [ reduce using rule 81 (empty -> .) ]
  ! LEAVE           [ reduce using rule 81 (empty -> .) ]
  ! PROCEED         [ reduce using rule 81 (empty -> .) ]
  ! DONATE          [ reduce using rule 81 (empty -> .) ]

    statement                      shift and go to state 3
    statement_list                 shift and go to state 23
    variable_declaration           shift and go to state 4
    variable_assignment            shift and go to state 5
    conditional_statement          shift and go to state 6
    array_declaration              shift and go to state 7
    queue_declaration              shift and go to state 8
    stack_declaration              shift and go to state 9
    try_block                      shift and go to state 10
    catch_block                    shift and go to state 11
    loop_statement                 shift and go to state 12
    function_declaration           shift and go to state 13
    function_call                  shift and go to state 14
    builtin_call                   shift and go to state 15
    empty                          shift and go to state 16

state 4

    (4) statement -> variable_declaration .

    BIRO            reduce using rule 4 (statement -> variable_declaration .)
    SMALLBIRO       reduce using rule 4 (statement -> variable_declaration .)
    ID              reduce using rule 4 (statement -> variable_declaration .)
    LITERAL_A       reduce using rule 4 (statement -> variable_declaration .)
    LITERAL_Q       reduce using rule 4 (statement -> variable_declaration .)
    LITERAL_S       reduce using rule 4 (statement -> variable_declaration .)
    $end            reduce using rule 4 (statement -> variable_declaration .)
    RCURL           reduce using rule 4 (statement -> variable_declaration .)
    LEAVE           reduce using rule 4 (statement -> variable_declaration .)
    PROCEED         reduce using rule 4 (statement -> variable_declaration .)
    DONATE          reduce using rule 4 (statement -> variable_declaration .)


state 5

    (5) statement -> variable_assignment .

    BIRO            reduce using rule 5 (statement -> variable_assignment .)
    SMALLBIRO       reduce using rule 5 (statement -> variable_assignment .)
    ID              reduce using rule 5 (statement -> variable_assignment .)
    LITERAL_A       reduce using rule 5 (statement -> variable_assignment .)
    LITERAL_Q       reduce using rule 5 (statement -> variable_assignment .)
    LITERAL_S       reduce using rule 5 (statement -> variable_assignment .)
    $end            reduce using rule 5 (statement -> variable_assignment .)
    RCURL           reduce using rule 5 (statement -> variable_assignment .)
    LEAVE           reduce using rule 5 (statement -> variable_assignment .)
    PROCEED         reduce using rule 5 (statement -> variable_assignment .)
    DONATE          reduce using rule 5 (statement -> variable_assignment .)


state 6

    (6) statement -> conditional_statement .

    BIRO            reduce using rule 6 (statement -> conditional_statement .)
    SMALLBIRO       reduce using rule 6 (statement -> conditional_statement .)
    ID              reduce using rule 6 (statement -> conditional_statement .)
    LITERAL_A       reduce using rule 6 (statement -> conditional_statement .)
    LITERAL_Q       reduce using rule 6 (statement -> conditional_statement .)
    LITERAL_S       reduce using rule 6 (statement -> conditional_statement .)
    $end            reduce using rule 6 (statement -> conditional_statement .)
    RCURL           reduce using rule 6 (statement -> conditional_statement .)
    LEAVE           reduce using rule 6 (statement -> conditional_statement .)
    PROCEED         reduce using rule 6 (statement -> conditional_statement .)
    DONATE          reduce using rule 6 (statement -> conditional_statement .)


state 7

    (7) statement -> array_declaration .

    BIRO            reduce using rule 7 (statement -> array_declaration .)
    SMALLBIRO       reduce using rule 7 (statement -> array_declaration .)
    ID              reduce using rule 7 (statement -> array_declaration .)
    LITERAL_A       reduce using rule 7 (statement -> array_declaration .)
    LITERAL_Q       reduce using rule 7 (statement -> array_declaration .)
    LITERAL_S       reduce using rule 7 (statement -> array_declaration .)
    $end            reduce using rule 7 (statement -> array_declaration .)
    RCURL           reduce using rule 7 (statement -> array_declaration .)
    LEAVE           reduce using rule 7 (statement -> array_declaration .)
    PROCEED         reduce using rule 7 (statement -> array_declaration .)
    DONATE          reduce using rule 7 (statement -> array_declaration .)


state 8

    (8) statement -> queue_declaration .

    BIRO            reduce using rule 8 (statement -> queue_declaration .)
    SMALLBIRO       reduce using rule 8 (statement -> queue_declaration .)
    ID              reduce using rule 8 (statement -> queue_declaration .)
    LITERAL_A       reduce using rule 8 (statement -> queue_declaration .)
    LITERAL_Q       reduce using rule 8 (statement -> queue_declaration .)
    LITERAL_S       reduce using rule 8 (statement -> queue_declaration .)
    $end            reduce using rule 8 (statement -> queue_declaration .)
    RCURL           reduce using rule 8 (statement -> queue_declaration .)
    LEAVE           reduce using rule 8 (statement -> queue_declaration .)
    PROCEED         reduce using rule 8 (statement -> queue_declaration .)
    DONATE          reduce using rule 8 (statement -> queue_declaration .)


state 9

    (9) statement -> stack_declaration .

    BIRO            reduce using rule 9 (statement -> stack_declaration .)
    SMALLBIRO       reduce using rule 9 (statement -> stack_declaration .)
    ID              reduce using rule 9 (statement -> stack_declaration .)
    LITERAL_A       reduce using rule 9 (statement -> stack_declaration .)
    LITERAL_Q       reduce using rule 9 (statement -> stack_declaration .)
    LITERAL_S       reduce using rule 9 (statement -> stack_declaration .)
    $end            reduce using rule 9 (statement -> stack_declaration .)
    RCURL           reduce using rule 9 (statement -> stack_declaration .)
    LEAVE           reduce using rule 9 (statement -> stack_declaration .)
    PROCEED         reduce using rule 9 (statement -> stack_declaration .)
    DONATE          reduce using rule 9 (statement -> stack_declaration .)


state 10

    (10) statement -> try_block .

    BIRO            reduce using rule 10 (statement -> try_block .)
    SMALLBIRO       reduce using rule 10 (statement -> try_block .)
    ID              reduce using rule 10 (statement -> try_block .)
    LITERAL_A       reduce using rule 10 (statement -> try_block .)
    LITERAL_Q       reduce using rule 10 (statement -> try_block .)
    LITERAL_S       reduce using rule 10 (statement -> try_block .)
    $end            reduce using rule 10 (statement -> try_block .)
    RCURL           reduce using rule 10 (statement -> try_block .)
    LEAVE           reduce using rule 10 (statement -> try_block .)
    PROCEED         reduce using rule 10 (statement -> try_block .)
    DONATE          reduce using rule 10 (statement -> try_block .)


state 11

    (11) statement -> catch_block .

    BIRO            reduce using rule 11 (statement -> catch_block .)
    SMALLBIRO       reduce using rule 11 (statement -> catch_block .)
    ID              reduce using rule 11 (statement -> catch_block .)
    LITERAL_A       reduce using rule 11 (statement -> catch_block .)
    LITERAL_Q       reduce using rule 11 (statement -> catch_block .)
    LITERAL_S       reduce using rule 11 (statement -> catch_block .)
    $end            reduce using rule 11 (statement -> catch_block .)
    RCURL           reduce using rule 11 (statement -> catch_block .)
    LEAVE           reduce using rule 11 (statement -> catch_block .)
    PROCEED         reduce using rule 11 (statement -> catch_block .)
    DONATE          reduce using rule 11 (statement -> catch_block .)


state 12

    (12) statement -> loop_statement .

    BIRO            reduce using rule 12 (statement -> loop_statement .)
    SMALLBIRO       reduce using rule 12 (statement -> loop_statement .)
    ID              reduce using rule 12 (statement -> loop_statement .)
    LITERAL_A       reduce using rule 12 (statement -> loop_statement .)
    LITERAL_Q       reduce using rule 12 (statement -> loop_statement .)
    LITERAL_S       reduce using rule 12 (statement -> loop_statement .)
    $end            reduce using rule 12 (statement -> loop_statement .)
    RCURL           reduce using rule 12 (statement -> loop_statement .)
    LEAVE           reduce using rule 12 (statement -> loop_statement .)
    PROCEED         reduce using rule 12 (statement -> loop_statement .)
    DONATE          reduce using rule 12 (statement -> loop_statement .)


state 13

    (13) statement -> function_declaration .

    BIRO            reduce using rule 13 (statement -> function_declaration .)
    SMALLBIRO       reduce using rule 13 (statement -> function_declaration .)
    ID              reduce using rule 13 (statement -> function_declaration .)
    LITERAL_A       reduce using rule 13 (statement -> function_declaration .)
    LITERAL_Q       reduce using rule 13 (statement -> function_declaration .)
    LITERAL_S       reduce using rule 13 (statement -> function_declaration .)
    $end            reduce using rule 13 (statement -> function_declaration .)
    RCURL           reduce using rule 13 (statement -> function_declaration .)
    LEAVE           reduce using rule 13 (statement -> function_declaration .)
    PROCEED         reduce using rule 13 (statement -> function_declaration .)
    DONATE          reduce using rule 13 (statement -> function_declaration .)


state 14

    (14) statement -> function_call .

    BIRO            reduce using rule 14 (statement -> function_call .)
    SMALLBIRO       reduce using rule 14 (statement -> function_call .)
    ID              reduce using rule 14 (statement -> function_call .)
    LITERAL_A       reduce using rule 14 (statement -> function_call .)
    LITERAL_Q       reduce using rule 14 (statement -> function_call .)
    LITERAL_S       reduce using rule 14 (statement -> function_call .)
    $end            reduce using rule 14 (statement -> function_call .)
    RCURL           reduce using rule 14 (statement -> function_call .)
    LEAVE           reduce using rule 14 (statement -> function_call .)
    PROCEED         reduce using rule 14 (statement -> function_call .)
    DONATE          reduce using rule 14 (statement -> function_call .)


state 15

    (15) statement -> builtin_call .
